fixing padding on mobile

--- a/components/invitation_modal/invitation_modal.scss
+++ b/components/invitation_modal/invitation_modal.scss
@@ -9,6 +9,10 @@
     align-items: center;
     font-size: 16px;
     color: var(--center-channel-color-90);
+    @media (max-width: 768px) {
+        padding-left: 15px;
+        padding-right: 15px;
+    }
 
     h1 {
         font-size: 32px;
